src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Antologia__c</fullName>
        <label>Antología</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AplicaPromocionCero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aplica promoción cero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsignacionAutomatica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignación automática</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beca__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beca</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Beca__c.TipoBeca__c</field>
                <operation>equals</operation>
                <valueField>$Source.TipoBeca__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Beca__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ColegiaturaDescuento__c</fullName>
        <formula>Colegiatura__c -( Colegiatura__c * PorcentajeBeca__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Colegiatura con descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Colegiatura__c</fullName>
        <label>Colegiatura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ConFichaPago__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Con ficha pago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConceptoInscripcion__c</fullName>
        <label>Concepto inscripción</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisponiblePromocionCero__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disponible promoción cero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExamenAdmision__c</fullName>
        <label>Examen de admisión</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FolioCalculadora__c</fullName>
        <label>Folio calculadora</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folio__c</fullName>
        <label>Folio</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormaPago__c</fullName>
        <globalPicklist>FormaPago</globalPicklist>
        <label>Forma de pago</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grupo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grupo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Grupo__c.OfertaEducativa__c</field>
                <operation>equals</operation>
                <valueField>$Source.OfertaEducativa__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Grupo__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImporteTotal__c</fullName>
        <formula>IF( AplicaPromocionCero__c , 0, Inscripcion__c -( Inscripcion__c * PorcentajeDescuento__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InscripcionDescuento__c</fullName>
        <formula>IF( AplicaPromocionCero__c , 0, Inscripcion__c -( Inscripcion__c * PorcentajeDescuento__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inscripción con descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inscripcion__c</fullName>
        <label>Inscripción</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LetraBeca__c</fullName>
        <globalPicklist>CategoriaLetra</globalPicklist>
        <label>Letra de Beca</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modalidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Modalidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MotivoPerdida__c</fullName>
        <label>Motivo Perdida</label>
        <picklist>
            <picklistValues>
                <fullName>Inscrito en otra institución</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de recursos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No quiere estudiar en IEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambia de residencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devolución</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Oportunidades (Nivel)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NombreConvenio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre de convenio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Beca__c.TipoBeca__c</field>
                <operation>equals</operation>
                <value>Convenio</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Beca__c</referenceTo>
        <relationshipLabel>Oportunidades (Nombre de convenio)</relationshipLabel>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumeroMensualidades__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero de mensualidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OfertaEducativa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta Educativa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OfertaEducativa__c.Periodo__c</field>
                <operation>equals</operation>
                <valueField>$Source.Periodo__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OfertaEducativa__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pago__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Realización del pago</description>
        <label>Pago</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Periodo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Periodo</label>
        <referenceTo>Periodo__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PorcentajeBeca__c</fullName>
        <label>% de beca en colegiatura</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PorcentajeDescuento__c</fullName>
        <label>% de descuento en inscripción</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programa</label>
        <referenceTo>Programa__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promedio__c</fullName>
        <globalPicklist>Promedio</globalPicklist>
        <label>Promedio</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Propedeutico__c</fullName>
        <label>Propedéutico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SolicitudPromocion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solicitud de promoción</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubOrigenCandidato__c</fullName>
        <globalPicklist>SubOrigenCandidato</globalPicklist>
        <label>Sub origen de candidato</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoBeca__c</fullName>
        <globalPicklist>TipoBeca</globalPicklist>
        <label>Tipo de Beca</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TipoDescuentoOtorgado__c</fullName>
        <globalPicklist>TipoDescuento</globalPicklist>
        <label>Tipo descuento otorgado</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uniforme__c</fullName>
        <label>Uniforme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Validado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VigenciaDescuento__c</fullName>
        <label>VigenciaDescuento</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>